# BMI203-HW5-NW

./: main.py  pyproject.toml
.github/workflows/: test.yml
align/: ifoe_align.py
test/: ifoe_test_align.py  test_align.py
